All the code needed to handle EJ oAuth
