# owo/api/user.py
@@ -1,64 +1,17 @@
 from pymongo import MongoClient
 from loguru import logger
-from flask import Blueprint, request, Response, jsonify
-from owo.api.utils import schema_validator, validate_ej
-from owo.security.hashing import hash_new_password
+from flask import Blueprint, request, jsonify
+from owo.api.utils import schema_validator
 import owo.api.schemas as schemas
 
 
 logger.add("api_user.log", colorize=True,
-           format="<green>{time}</green> <level>{message}</level>", rotation="1 day",
+           format="<green>{time}</green> <level>{message}</level>",
+           rotation="1 day",
            backtrace=True, diagnose=True)
 
 client = MongoClient('mongodb://mongo:27017/', connect=False)
 user = Blueprint('page', __name__)
-
-
-@user.route("/user", methods=["post"])
-@schema_validator(schemas.add_user)
-def add_user(): # TODO Поправить методы логина в соответсвии с методами ЭЖ
-    raise NotImplementedError
-    data = request.get_json()
-    if not validate_ej(data["ejlogin"], data["ejpassword"]):
-        return (
-            {
-                "message": "Wrong EJ login/pass",
-                "code": 400
-            },
-            400
-        )
-
-    if client["meta"]["users"].count_documents({"login": data["login"]}):
-        return (
-            {
-                "message": "User with such login exists",
-                "code": 400
-            },
-            400
-        )
-
-    if client["meta"]["users"].count_documents({"ejlogin": data["ejlogin"]}):
-        return (
-            {
-                "message": "User with such ejlogin exists",
-                "code": 400
-            },
-            400
-        )
-
-    client["meta"]["users"].insert_one(
-        {
-            "login": data["login"],
-            "hpassword": hash_new_password(data["password"]),
-            "ejtoken": None,
-            "type": "ok",
-            "state": "normal"
-        }
-    )
-
-    return Response(
-        status=200
-    )
 
 
 @user.route("/user", methods=["get"])
@@ -86,7 +39,7 @@ def get_users():
             del item["ejtoken"]
             item["id"] = str(item["_id"])
             del item["_id"]
-            
+
             out.append(item)
 
     return (jsonify(out), 200)
